<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, UDTMobile!</string>
    <string name="app_name">UT Mobile</string>
    <string name="input_mail">  Username o Email</string>
    <string name="password">  Contraseña</string>
    <string name="user_data">Datos de Usuario</string>
    <string name="register_button_text">Registrar</string>
    <string name="login_button_text">Iniciar Sesión</string>
    <string name="register_title">REGISTRO</string>
    <string name="user_name">Nombre</string>
    <string name="lastname">Apellido</string>
    <string name="acceptterms">Acepto Terminos y Condiciones</string>
    <string name="home_tittle">HOME</string>
    <string name="track_ticket">Rastrear Ticket</string>
    <string name="track_family">Rastrear Familia</string>
    <string name="dondeestoy">¿ Donde estoy ?</string>
    <string name="config">Configuracion</string>
    <string name="dondeestoy_title">¿DONDE ESTOY?</string>
    <string name="track_family_title">RASTREAR FAMILIA</string>
    <string name="miembro">Familiar</string>
    <string name="all_family">Todos</string>
    <string name="tracktickettitle">RASTREAR TICKET</string>
    <string name="ticketnumber">Ticket #</string>
    <string name="trackbutton">Track</string>
    <string name="latin">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos. Eu sit tincidunt incorrupte definitionem, vis mutat affert percipit cu, eirmod consectetuer signiferumque eu per. In usu latine equidem dolores. Quo no falli viris intellegam, ut fugit veritus placerat per.</string>
    <string name="sharetext">Enviar Posición</string>
    <string name="my_pos_text">Hola, te envio mis coordenadas :</string>
    <string name="invitado">Invitado</string>
    <string name="config_title">CONFIGURACIÓN</string>
    <string name="trackmypos">Reportar mi posición</string>
    <string name="interval">Frecuencia de Reporte</string>
    <string name="guardar">Guardar Cambios</string>
    <string name="cancel">Cancelar</string>
</resources>
