<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_common" android:gravity="center" android:layout_marginBottom="10px">

<LinearLayout
    android:id="@+id/LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/backgroud_title"
    android:gravity="center" >
<TextView
            android:id="@+id/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_tittle"
            android:textColor="#ffffff"
            android:textSize="30dip"
            android:textStyle="bold"
            android:typeface="sans" >

</TextView>
</LinearLayout>

<LinearLayout
    android:id="@+id/linearLayout3"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    android:paddingTop="20px">

    <Button
        android:id="@+id/trackTicketButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:background="@drawable/boton"
        android:padding="5px"
        android:text="@string/track_ticket"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/trackFamilyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:background="@drawable/boton"
        android:padding="5px"
        android:text="@string/track_family"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/dondeestoy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:background="@drawable/boton"
        android:padding="5px"
        android:text="@string/dondeestoy"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/configbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10px"
        android:background="@drawable/boton"
        android:padding="5px"
        android:text="@string/config"
        android:textColor="#ffffff"
        android:textSize="15dp"
        android:textStyle="bold"
        android:typeface="sans" />

</LinearLayout>



</LinearLayout>
